# unicorn-racing-stack

./: .dockerignore  .gitignore  .gitmodules  BUILD.md  INSTALL.md  INSTALLATION.md  MIGRATION_GAP_ANALYSIS.md  MIGRATION_LOG.md  README.md  SIM_VERIFICATION_REPORT.md  STATE_MACHINE_SPLINER_TUNING_GUIDE.md  build_packages_on_car.sh  cyclonedds.xml  dds_netcheck.sh  docker-compose.yml  environment.yml  patch_cartographer_so.sh  requirements.txt  setup_conda_onCar.sh  setup_conda_onLaptop.sh  setup_deps.sh  unicorn.lock.repos  unicorn.repos  unicorn.sh
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.docker/: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  results.txt  run_platform_test.sh  (+1 more)
f110_utils/libs/frenet_conversion/: CMakeLists.txt  package.xml  setup.py
f110_utils/libs/frenet_conversion/frenet_conversion/: __init__.py
f110_utils/libs/frenet_conversion/scripts/: frenet_converter_demo
f110_utils/libs/frenet_conversion_msgs/: package.xml
f110_utils/libs/grid_filter/: package.xml
f110_utils/libs/grid_filter/grid_filter/: grid_filter.py  grid_filter_test.py
f110_utils/nodes/frenet_conversion_server/: package.xml  setup.cfg  setup.py
f110_utils/nodes/frenet_conversion_server/frenet_conversion_server/: frenet_conversion_server_node.py
perception/: CMakeLists.txt  package.xml  setup.py
perception/include/: detect.h
perception/perception/: detect.py  detect_ros.py  opponent_predictor.py  tracking_ros.py
perception/scripts/: kiss_obstacle_bridge.py  multi_tracking.py
perception/src/: detect.cpp
planner/gb_optimizer/: package.xml  setup.cfg  setup.py
planner/gb_optimizer/gb_optimizer/: __init__.py  _tph_compat.py  global_planner_node.py  global_trajectory_publisher.py  global_trajectory_tuner.py  global_trajectory_tuner_helpers.py  readwrite_global_waypoints.py  static_obstacle_layer.py  static_reopt_core.py  static_reopt_node.py
planner/gb_optimizer/gb_optimizer/global_racetrajectory_optimization/: trajectory_optimizer.py
planner/gb_optimizer/scripts/: test_static_obstacle_layer.py  test_static_reopt.py  test_static_reopt_apex.py
planner/spliner/: package.xml  setup.cfg  setup.py
planner/spliner/spliner/: spliner_node.py  start_spline_node_v2.py  static_avoidance_node.py
planner/sqp_planner/: package.xml  setup.cfg
planner/sqp_planner/sqp_planner/: sqp_avoidance_node.py
planner_pkgs/recovery_spliner/: package.xml
planner_pkgs/recovery_spliner/recovery_spliner/: recovery_spliner_node.py
prediction/gp_traj_predictor/: CMakeLists.txt  README.md  package.xml
prediction/gp_traj_predictor/src/: dynamic_prediction_server.py  gaussian_process_opp_traj.py  opp_prediction.py  opponent_trajectory.py  prediction_node.py  predictor_opponent_trajectory.py
race_utils/f110_utils/libs/frenet_conversion/: CMakeLists.txt  package.xml
race_utils/f110_utils/libs/frenet_conversion/frenet_conversion/: __init__.py  frenet_converter.py  frenet_converter_demo_node.py
race_utils/f110_utils/libs/frenet_conversion/include/: frenet_conversion.h
race_utils/f110_utils/libs/frenet_conversion/src/: frenet_conversion.cc
race_utils/f110_utils/libs/frenet_conversion_msgs/: CMakeLists.txt
race_utils/f110_utils/libs/grid_filter/: CMakeLists.txt
race_utils/f110_utils/libs/grid_filter/grid_filter/: grid_filter.py
race_utils/f110_utils/libs/grid_filter/include/: grid_filter.h
race_utils/f110_utils/libs/grid_filter/src/: grid_filter.cpp
race_utils/f110_utils/libs/polygon_filter/: CMakeLists.txt  package.xml
race_utils/f110_utils/libs/polygon_filter/include/: polygon_filter.h
race_utils/f110_utils/libs/polygon_filter/src/: polygon_filter.cpp
race_utils/f110_utils/nodes/lap_analyser/: package.xml  setup.cfg  setup.py
race_utils/f110_utils/nodes/lap_analyser/lap_analyser/: lap_analyser.py
race_utils/f110_utils/nodes/lap_analyser/launch/: lap_analyser.launch.py
race_utils/f110_utils/nodes/random_obstacle_publisher/: package.xml  setup.py
race_utils/f110_utils/nodes/random_obstacle_publisher/launch/: random_obstacle_publisher.launch.py
race_utils/f110_utils/nodes/random_obstacle_publisher/random_obstacle_publisher/: random_obstacle_publisher.py
race_utils/f110_utils/nodes/sector_tuner/: package.xml  setup.py
race_utils/f110_utils/nodes/sector_tuner/config/: speed_scaling.yaml
race_utils/f110_utils/nodes/sector_tuner/launch/: sector_tuner.launch.py
race_utils/f110_utils/nodes/sector_tuner/sector_tuner/: sector_slicer.py  sector_tuner.py
race_utils/opponent/: package.xml  setup.cfg  setup.py
race_utils/opponent/launch/: opponent.launch.xml
race_utils/opponent/opponent/: obstacle_merger.py  opponent_controller.py  opponent_vehicle.py  scan_augmentor.py  static_obstacle_manager.py
race_utils/pitwall/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
race_utils/pitwall/config/: pitwall.rviz  topics.yaml
race_utils/pitwall/include/pitwall/: pitwall.hpp  pitwall_panel.hpp
race_utils/pitwall/launch/: live.launch.py  pitwall.launch.py  record.launch.py
race_utils/pitwall/pitwall/: __init__.py
race_utils/pitwall/scripts/: demo_producer.py  monitor_node.py
race_utils/pitwall/src/: demo_producer.cpp  pitwall.cpp  pitwall_panel.cpp
race_utils/raycaster/range_libc/pywrapper/: RangeLibc.pyx  pyproject.toml  setup.py
sensor/vesc/vesc_driver/: CMakeLists.txt
sensor/vesc/vesc_driver/src/: vesc_driver.cpp
simulator/sim_control_panel/: CMakeLists.txt  package.xml  plugin_description.xml
simulator/sim_control_panel/include/sim_control_panel/: sim_control_panel.hpp
simulator/sim_control_panel/src/: sim_control_panel.cpp
state_machine/: package.xml  setup.py
state_machine/config/: state_machine_params.yaml
state_machine/config/planners/: dynamic_avoidance_planner.yaml  global_tracking.yaml  recovery_planner.yaml  start_planner.yaml  static_avoidance_planner.yaml
state_machine/launch/: state_machine.launch.py
state_machine/state_machine/: state_machine.py  state_machine_node.py  state_machine_params.py  state_transitions.py  states.py  states_types.py  transitions.py
(+261 files in other folders)
