<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gb_optimizer</name>
  <version>0.0.0</version>
  <description>The gb_optimizer package: global trajectory optimizer (global planner) for the UNICORN f1tenth racing stack.</description>
  <maintainer email="lucaschw@todo.todo">lucaschw</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>f110_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>stack_master</depend>
  <depend>frenet_conversion</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
