<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gp_traj_predictor</name>
  <version>0.0.0</version>
  <description>Opponent trajectory estimation and prediction for the UNICORN ROS 2 stack.</description>
  <maintainer email="dltjdwns9871@naver.com">jobalchi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>f110_msgs</exec_depend>
  <exec_depend>frenet_conversion</exec_depend>
  <exec_depend>frenet_conversion_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
