<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opponent</name>
  <version>0.0.0</version>
  <description>
    Engine-agnostic virtual opponent for the f1tenth stack. A kinematic opponent
    vehicle (FTG / pure-pursuit / keyboard) is injected into the EGO lidar by a
    scan_augmentor overlay. Identical method in simulation (base scan from
    gym_bridge) and on the real car (base scan from the real lidar) -> VIL.
  </description>
  <maintainer email="kwonc@unist.ac.kr">js</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>f110_msgs</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>python-transforms3d-pip</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
