<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim_control_panel</name>
  <version>0.0.0</version>
  <description>RViz panel to control the f1tenth_gym_ros sim: remove opponent, clear static obstacles, opponent speed.</description>
  <maintainer email="kwonc@unist.ac.kr">js</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>pluginlib</depend>
  <depend>std_msgs</depend>
  <depend>qtbase5-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
