<?xml version="1.0"?>
<package format="3">
  <name>frenet_conversion_msgs</name>
  <version>0.0.0</version>
  <description>Frenet-to-global conversion services (split from frenet_conversion).</description>
  <maintainer email="jonbecke@student.ethz.ch">Jonathan Becker</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>f110_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export><build_type>ament_cmake</build_type></export>
</package>
