<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>frenet_conversion_server</name>
  <version>0.0.0</version>
  <description>Service server converting between global and frenet coordinates</description>
  <maintainer email="eghignone@pbl.ee.ethz.ch">gnone</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>ros2launch</exec_depend>
  <depend>rclpy</depend>
  <depend>f110_msgs</depend>
  <depend>frenet_conversion</depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
