<?xml version="1.0"?>
<package format="3">
  <name>frenet_conversion</name>
  <version>0.0.0</version>
  <description>Frenet-to-global conversion library (Python class FrenetConverter).</description>
  <maintainer email="jonbecke@student.ethz.ch">Jonathan Becker</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- C++ library (frenet_conversion_lib) deps -->
  <depend>rclcpp</depend>
  <depend>f110_msgs</depend>

  <!-- Python module runtime deps (frenet_conversion.frenet_converter) -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
