<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>random_obstacle_publisher</name>
  <version>0.0.0</version>
  <description>Publishes random obstacles along the global trajectory for testing</description>
  <maintainer email="jonbecke@ethz.ch">Jonathan Becker</maintainer>
  <license>MIT</license>

  <exec_depend>ros2launch</exec_depend>
  <depend>rclpy</depend>
  <depend>f110_msgs</depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
