<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sector_tuner</name>
  <version>0.0.0</version>
  <description>Sector velocity scaler and sector slicing GUI for F1TENTH racing</description>
  <maintainer email="shineejoon@unist.ac.kr">HMCL</maintainer>
  <license>MIT</license>

  <exec_depend>ros2launch</exec_depend>
  <depend>rclpy</depend>
  <depend>f110_msgs</depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
